# ai-rpi-project

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: hailort.cmake  opencv.cmake
src/: CMakeLists.txt  main.cpp
